# summerschool

./: .gitignore  LICENSE  README.md  __init__.py  launch.sh  pyproject.toml  setup.py
data/: __init__.py
data/generation/: generate_big_heat_fno.py  generate_burgers.py  generate_heat.py  generate_heat_deeponet.py  pinns_burgers.py
data/plotting/: animation_burgers.py  plot_burgers.py  plot_solutions_fno_heat.py  plot_solutions_fno_heat_big.py
data/preprocessing/: __init__.py  process_given_dataset.py
model/: __init__.py
model/deeponet/: __init__.py  deeponet.py
model/fno/: __init__.py  fno.py
notebooks/.ipynb_checkpoints/: training_fno_heat-checkpoint.ipynb
notebooks/baselines/: deep_xde_baseline.ipynb  deep_xde_baseline.py  neuraloperator_baseline.ipynb  neuraloperator_baseline.py  training_deeponet_heat2d copy.ipynb
notebooks/deeponet/: TORUNDEEPONETCOMPARISON.ipynb  TORUNDEEPONETCOMPARISON.py  training_deeponet_burgers.ipynb  training_deeponet_burgers.py  training_deeponet_heat2d.ipynb  training_deeponet_heat2d_big.ipynb  training_deeponet_heat2d_big.py
notebooks/fno/: TORUNFNO.ipynb  TORUNFNO.py  training_fno_burgers.ipynb  training_fno_burgers.py  training_fno_heat.ipynb  training_fno_heat.py  training_fno_heat_big.py
report/: call_deeponet_layer.tex  call_fourier_layer.tex  classstructure.tex  viz_tensor.tex
results/: history15032025_1738.txt
tests/: test_env.py  test_fft.py  test_model_imports.py  test_nd_gpu.py  test_tensorflow.py  test_tf_cuda.py  test_tf_deeponet.py  test_tf_version.py  test_utils.py
utils/: utils.py
(+105 files in other folders)
